add ShareSymbolSync, fix dedicated-server crashes and company screen
API
+ ShareSymbolStore: server-managed PNG symbol library with manifest
+ AsyncCompanyManager: GET_SYMBOL_MANIFEST / PULL_SYMBOL_BYTES ARRS
+ SharePresetRegistry: isBundledId / orderedIds / allIds, delegates
  dynamic ids to ClientSymbolRegistry
+ S2CShareSymbolManifestPacket, S2CShareSymbolDataPacket,
  C2SShareSymbolDataRequest, S2SShareSymbolManifestPacket,
  S2SShareSymbolDataPacket

CLI
+ /banksystem symbols list/add/remove/reload admin commands

UI/UX
+ editor symbol picker + StampedShareRenderer display synced symbols
~ CompanyManagementScreen opens with pre-resolved rights on join
  (no ARRS race; server pushes rights in open packet)

Hardening
~ five dedicated-server crash fixes: IntegratedServer constant pool,
  Minecraft.setScreen in common packets, Screen.hasShiftDown in item,
  BankSystemMenus generics, NeoForgeSetup missing Dist.CLIENT
~ DataHandler backup now includes Companies/ folder
~ isAllowedToCallByClient was blanket false; allow-listed read-only

Internal
+ ClientSymbolRegistry: disk cache, DECLARED/READY, hash-verified PNG,
  DynamicTexture registration per symbol
+ NeoForgeClientSetup split from NeoForgeSetup (Dist.CLIENT)
+ C2SRequestCompanyManagementScreen packet
~ dispatchInput routing: null server → C2S, slave → sendRequestToMaster,
  master → direct handleOnMasterServer (mirrors AsyncBankManager)